--- a/lab2/SuperTimer/app/src/main/res/values/MyTheme.xml
+++ b/lab2/SuperTimer/app/src/main/res/values/MyTheme.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="M_THEME" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="my_theme_light" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryVariant">@color/blue</item>
