--- a/lab3/SeaBattle/app/src/main/res/layout/activity_main.xml
+++ b/lab3/SeaBattle/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,27 @@
     tools:context=".MainActivity"
     android:orientation="horizontal">
 
-<!--    <GridLayout-->
-<!--        android:id="@+id/gameTable"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:columnCount="10"-->
-<!--        android:orientation="vertical"-->
-<!--        android:visibility="invisible">-->
-<!--    </GridLayout>-->
 
-    <com.example.seabattle.Field.GameField
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:layout_margin="20dp"/>
+    <Button
+        android:id="@+id/create"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Создать игру">
+    </Button>
 
+
+    <Button
+        android:id="@+id/connect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Подключиться">
+    </Button>
+
+
+    <Button
+        android:id="@+id/stat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Статистика">
+    </Button>
 </LinearLayout>
