--- a/lab3/SeaBattle/app/src/main/res/layout/activity_login.xml
+++ b/lab3/SeaBattle/app/src/main/res/layout/activity_login.xml
@@ -5,37 +5,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".LoginActivity"
     android:orientation="vertical"
     android:gravity="center">
 
-
-    <Button
-        android:id="@+id/create"
+    <EditText
+        android:id="@+id/login_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Создать игру"
+        android:hint="Электронная почта"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="10dp">
+    </EditText>
+
+    <EditText
+        android:id="@+id/password_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:hint="Пароль"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="30dp">
+    </EditText>
+
+    <Button
+        android:id="@+id/signIn_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Войти"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp">
     </Button>
 
-
     <Button
-        android:id="@+id/connect"
+        android:id="@+id/signUp_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Подключиться"
+        android:text="Регистрация"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp">
     </Button>
 
-
-    <Button
-        android:id="@+id/stat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Статистика"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp">
-    </Button>
 </LinearLayout>
