--- a/lab3/SeaBattle/app/src/main/res/layout/activity_main.xml
+++ b/lab3/SeaBattle/app/src/main/res/layout/activity_main.xml
@@ -38,4 +38,13 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp">
     </Button>
+
+    <Button
+        android:id="@+id/exit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Выйти из аккаунта"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp">
+    </Button>
 </LinearLayout>
