add profile, fix bugs

--- a/lab3/SeaBattle/app/src/main/res/layout/activity_main.xml
+++ b/lab3/SeaBattle/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,14 @@
         android:layout_marginEnd="50dp">
     </Button>
 
+    <Button
+        android:id="@+id/profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Профиль"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp">
+    </Button>
 
     <Button
         android:id="@+id/stat"
