--- a/lab3/SeaBattle/app/src/main/res/layout/activity_profile.xml
+++ b/lab3/SeaBattle/app/src/main/res/layout/activity_profile.xml
@@ -17,11 +17,20 @@
         android:gravity="center">
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/user_image"
             android:layout_width="175dp"
             android:layout_height="175dp"
             android:layout_margin="25dp">
         </ImageView>
+
+        <ProgressBar
+            android:id="@+id/progress_upload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp">
+        </ProgressBar>
 
         <LinearLayout
             android:layout_width="match_parent"
