--- a/lab3/SeaBattle/app/src/main/res/values/colors.xml
+++ b/lab3/SeaBattle/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#b6e1fc</color>
+    <color name="pink">#ff9baa</color>
+    <color name="light_pink">#ffc2cc</color>
+    <color name="gray">#808080</color>
+    <color name="darkGray">#303030</color>
 </resources>
